Added working scoreboad and enemy shoot lasers!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "astroblast"
+name = "space_shooter"
 version = "0.1.0"
 authors = ["RobustSeagull <adrien.bourgine@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 bevy = "0.4"
-rand = "0.7.3"
+rand = "0.8.1"
